# advent-of-code

./: .gitignore  README.md  poetry_utils.py  pyproject.toml
.github/workflows/: lint_format.yaml
2022/01/: solution.py
2024/01/: input.txt  solution_01.py
2024/02/: input.txt  solution_02.py
2024/03/: input.txt  solution_03.py
2024/04/: input.txt  solution_04.py
2024/05/: input.txt  solution_05.py
2024/06/: input.txt  solution_06.py
2024/07/: input.txt  solution_07.py
